[package]
name = "oyster-serverless-biller"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true

[dependencies]
anyhow = "1.0.75"
chrono = "0.4.26"
clap = { version = "4.4.7", features = ["derive"] }
ethers = "2.0.11"
hex = "0.4.3"
k256 = { version = "0.13.2", features = ["ecdsa", "ecdsa-core"] }
openssl = { version = "0.10.60", features = ["vendored"] }
reqwest = { version = "0.11.9", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.16.1", features = ["full"] }
tokio-retry = "0.3"
